--- a/Link Saver Chrome Extension/LP05.css
+++ b/Link Saver Chrome Extension/LP05.css
@@ -1,4 +1,30 @@
+img{
+    height: 40px;
+    width: 50px;
+}
 div{
     height: auto;
     width: 550px;
+   border-radius: 5px;
+}
+input{
+    width:400px;
+    height: auto;
+}
+button{
+    font-family: 'Gloock', serif;
+}
+h1{
+    font-family: 'Gloock', serif;
+}
+.len{ 
+    padding: 10px;
+}
+#fit{
+    width: 550px;
+    height: 50px;
+
+}
+#flex{
+    display: flex;
 }
