--- a/Link Saver Chrome Extension/LP05.css
+++ b/Link Saver Chrome Extension/LP05.css
@@ -28,3 +28,25 @@ h1{
 #flex{
     display: flex;
 }
+.tabs{
+    padding-left: 2%;
+    padding-bottom: 2%;
+}
+.delbox{
+    padding-left: 2%;
+    padding-right: 2%;
+}
+.droplink{
+    display: flex;
+}
+#del-btn-fin{
+    margin-left: auto;
+}
+select{
+    margin-left: auto;
+    padding-left: 2%;
+}
+.delbox{
+    padding-right: 2%;
+    padding-left: 2%;
+}
